Fix vertical alignment in re-rank mode 2 (working)

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -15,7 +15,7 @@ ol {
 
 ol li {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   margin-bottom: 4px;
 }
 
